cloud/experiments/owncloud/mariadb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: docker.io/mariadb:10.6
        args:
        - --max-allowed-packet=128M
        - --innodb-log-file-size=64M
        ports:
        - containerPort: 3306
        securityContext: {}
        #   runAsUser: 1000
      volumes:
      - name: mariadb-data
        persistentVolumeClaim:
          claimName: mariadb-data
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: torrents
spec:
  selector:
    app: mariadb
  ports:
  - name: mariadb
    protocol: TCP
    port: 3306
    targetPort: 3306
