cloud/experiments/owncloud/owncloud-10.11.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
  namespace: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      containers:
      - name: owncloud
        image: docker.io/owncloud/server:10.11
        # # image: ubuntu:latest
        # # Just spin & wait forever
        # command: ["/bin/bash", "-c", "--"]
        # args: ["/usr/bin/owncloud server; while true; do sleep 1; done;"]
        ports:
        - name: web-ui
          containerPort: 8080
        securityContext: {}
        #   runAsUser: 33
      volumes:
      - name: owncloud-data
        persistentVolumeClaim:
          claimName: owncloud-data
---
apiVersion: v1
kind: Service
metadata:
  name: owncloud-service
  namespace: torrents
spec:
  selector:
    app: owncloud
  ports:
  - name: web-ui
    protocol: TCP
    port: 80
    targetPort: 8080
