cloud/experiments/owncloud/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owncloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16,1.2.3.4,1.2.3.4
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - owncloud.example.duckdns.org
    secretName: owncloud.example.duckdns.org-secret-staging
  rules:
  - host: owncloud.example.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: owncloud-service
            port:
              number: 80
